MODINREACH-508: Add missing permissions (#464)
(cherry picked from commit 27f86421024f62715ca96bba54b1d21c7a485ae4)